--- a/webgl/fundamental/01 attribute.html
+++ b/webgl/fundamental/01 attribute.html
@@ -67,7 +67,7 @@
 
     gl.clearColor(0, 0, 0, 1);
     gl.clear(gl.COLOR_BUFFER_BIT);
-    gl.drawArrays(gl.LINE_LOOP, 0, 3);
+    gl.drawArrays(gl.POINTS, 0, 3);
     // gl.drawArrays(gl.POINTS, 0, 1);
   </script>
 </body>
